--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.8
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
-LoaderVersion=2.1
-LoaderChangeLog="- Fixed strings getting destroyed after initialisation."
+LoaderVersion=2.2
+LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK)."
 [Sonic Lost World]
-LoaderVersion=1.1
-LoaderChangeLog="- Fixed OnExit bug"
+LoaderVersion=2.2
+LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK).\n- Improve memory writing performance."
