--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.8
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
-LoaderVersion=2.2
-LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK)."
+LoaderVersion=2.2.1
+LoaderChangeLog="- Fix memory protection when writing data.\n- Fix random crashes"
 [Sonic Lost World]
 LoaderVersion=2.2
 LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK).\n- Improve memory writing performance."
