Updated ForcesModLoader to v6.9

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=6.8
-LoaderChangeLog="- Fixed loading redirected saves on first boot"
+LoaderVersion=6.9
+LoaderChangeLog="- Added support for loading the mod database in paths other than mods"
 [Sonic Generations]
 LoaderVersion=2.2.1
 LoaderChangeLog="- Fix memory protection when writing data.\n- Fix random crashes"
