--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.9
 LoaderChangeLog="- Added support for loading the mod database in paths other than mods"
 [Sonic Generations]
-LoaderVersion=2.2.1
-LoaderChangeLog="- Fix memory protection when writing data.\n- Fix random crashes"
+LoaderVersion=2.3
+LoaderChangeLog="- Fix major loader lock bug."
 [Sonic Lost World]
 LoaderVersion=2.2
 LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK).\n- Improve memory writing performance."
