--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>HedgeModManager</RootNamespace>
     <AssemblyName>HedgeModManager</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -133,6 +133,7 @@
     <Compile Include="Github\UserInfo.cs" />
     <Compile Include="Github\ReleaseInfo.cs" />
     <Compile Include="Keys.cs" />
+    <Compile Include="Language.cs" />
     <Compile Include="ModUpdate.cs" />
     <Compile Include="Serialization\IniSerializer.cs" />
     <Compile Include="ShellProvider.cs" />
@@ -245,6 +246,7 @@
     <EmbeddedResource Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Language\zho.lang" />
     <None Include="Resources\ModLoader\ForcesModLoader.dll" />
   </ItemGroup>
   <ItemGroup>
