Update GCL to 2.3.2

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.9
 LoaderChangeLog="- Added support for loading the mod database in paths other than mods"
 [Sonic Generations]
-LoaderVersion=2.3.1
-LoaderChangeLog="- Fix loader injection time."
+LoaderVersion=2.3.2
+LoaderChangeLog="- Replace OnFrame hook for improving code compatability."
 [Sonic Lost World]
 LoaderVersion=2.2
 LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK).\n- Improve memory writing performance."
