--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -6,4 +6,6 @@
   <package id="Markdig" version="0.18.0" targetFramework="net47" />
   <package id="NAudio" version="1.9.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net47" />
+  <package id="PropertyTools" version="3.0.0" targetFramework="net47" />
+  <package id="PropertyTools.Wpf" version="3.0.0" targetFramework="net47" />
 </packages>
