--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net46" />
-  <package id="Fody" version="6.0.5" targetFramework="net46" developmentDependency="true" />
+  <package id="Fody" version="6.1.1" targetFramework="net47" developmentDependency="true" />
   <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net46" />
   <package id="Humanizer.Core" version="2.2.0" targetFramework="net47" />
   <package id="Markdig" version="0.18.0" targetFramework="net47" />
@@ -13,6 +13,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.6.0" targetFramework="net47" />
   <package id="NAudio" version="1.9.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net47" />
+  <package id="PropertyChanged.Fody" version="3.2.8" targetFramework="net47" />
   <package id="PropertyTools" version="3.0.0" targetFramework="net47" />
   <package id="PropertyTools.Wpf" version="3.0.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
