Update GCL & LCL

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.9
 LoaderChangeLog="- Added support for loading the mod database in paths other than mods"
 [Sonic Generations]
-LoaderVersion=2.3.3
-LoaderChangeLog="- Fix startup issues on some systems."
+LoaderVersion=2.4
+LoaderChangeLog="- Add support for new code system.\n - Fix injection problem to other processes."
 [Sonic Lost World]
-LoaderVersion=2.2
-LoaderChangeLog="- Add support of mods that replace DirectX9 (Reshade, DXVK).\n- Improve memory writing performance."
+LoaderVersion=2.4
+LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Add support for new code system."
