--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,9 +1,9 @@
 [Sonic Forces]
-LoaderVersion=6.9
-LoaderChangeLog="- Added support for loading the mod database in paths other than mods"
+LoaderVersion=6.10
+LoaderChangeLog="- Change INI Parser.\n- Update code system for HMMCodes."
 [Sonic Generations]
 LoaderVersion=2.4
-LoaderChangeLog="- Add support for new code system.\n - Fix injection problem to other processes."
+LoaderChangeLog="- Update code system for HMMCodes.\n- Fix injection problem to other processes."
 [Sonic Lost World]
 LoaderVersion=2.4
-LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Add support for new code system."
+LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Update code system for HMMCodes."
