--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.10
 LoaderChangeLog="- Change INI Parser.\n- Update code system for HMMCodes."
 [Sonic Generations]
-LoaderVersion=2.4
-LoaderChangeLog="- Update code system for HMMCodes.\n- Fix injection problem to other processes."
+LoaderVersion=2.4.1
+LoaderChangeLog="- Update code system for HMMCodes.\n- Fix injection problem to other processes.\n- Fix frame events."
 [Sonic Lost World]
 LoaderVersion=2.4
 LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Update code system for HMMCodes."
