--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.10
 LoaderChangeLog="- Change INI Parser.\n- Update code system for HMMCodes."
 [Sonic Generations]
-LoaderVersion=2.4.1
-LoaderChangeLog="- Update code system for HMMCodes.\n- Fix injection problem to other processes.\n- Fix frame events."
+LoaderVersion=2.4.2
+LoaderChangeLog="- Update code system for HMMCodes.\n- Fix a bug that kept Codes.dll open.\n- Fix injection problem to other processes.\n- Fix frame events."
 [Sonic Lost World]
-LoaderVersion=2.4
-LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Update code system for HMMCodes."
+LoaderVersion=2.4.1
+LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Fix a bug that kept Codes.dll open.\n- Update code system for HMMCodes."
