Updated ForcesModLoader to 7.0

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=6.10
-LoaderChangeLog="- Change INI Parser.\n- Update code system for HMMCodes."
+LoaderVersion=7.0
+LoaderChangeLog="- Rewritten File Loader. This should improve stability.\n- Removed ENC file loading, mods with files ending with .enc will nolonger load and will need to be updated.\n- Added ACB Redirection (Experimental)"
 [Sonic Generations]
 LoaderVersion=2.4.3
 LoaderChangeLog="- Added Sound and Movie Folder Redirection"
