Update LostCodeLoader to v2.4.2

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -5,5 +5,5 @@ LoaderChangeLog="- Rewritten File Loader. This should improve stability.\n- Remo
 LoaderVersion=2.4.3
 LoaderChangeLog="- Added Sound and Movie Folder Redirection"
 [Sonic Lost World]
-LoaderVersion=2.4.1
-LoaderChangeLog="- Merge changes from GenerationsCodeLoader.\n- Fix a bug that kept Codes.dll open.\n- Update code system for HMMCodes."
+LoaderVersion=2.4.2
+LoaderChangeLog="- Fix a crash related to memory permission for codes."
