--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=7.0
-LoaderChangeLog="- Rewritten File Loader. This should improve stability.\n- Removed ENC file loading, mods with files ending with .enc will nolonger load and will need to be updated.\n- Added ACB Redirection (Experimental)"
+LoaderVersion=7.1
+LoaderChangeLog="- Fix a crash related to memory permission for codes."
 [Sonic Generations]
 LoaderVersion=2.4.3
 LoaderChangeLog="- Added Sound and Movie Folder Redirection"
