--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=7.1
-LoaderChangeLog="- Fix a crash related to memory permission for codes."
+LoaderVersion=7.2
+LoaderChangeLog="- Fixed an issue where mods stopped working in v7.1\n- Fix a crash related to memory permission for codes."
 [Sonic Generations]
 LoaderVersion=2.4.3
 LoaderChangeLog="- Added Sound and Movie Folder Redirection"
