Update GCL & LCL

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=7.2
 LoaderChangeLog="- Fixed an issue where mods stopped working in v7.1\n- Fix a crash related to memory permission for codes."
 [Sonic Generations]
-LoaderVersion=2.4.3
-LoaderChangeLog="- Added Sound and Movie Folder Redirection"
+LoaderVersion=2.4.4
+LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
 [Sonic Lost World]
-LoaderVersion=2.4.2
-LoaderChangeLog="- Fix a crash related to memory permission for codes."
+LoaderVersion=2.4.3
+LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
