--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=7.2
-LoaderChangeLog="- Fixed an issue where mods stopped working in v7.1\n- Fix a crash related to memory permission for codes."
+LoaderVersion=7.3
+LoaderChangeLog="- Fix code compatability with HMM 7.2-10.\n- Add more code functions."
 [Sonic Generations]
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
