Add PPT2 to Loaders.ini and fix argument in codes

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -7,3 +7,6 @@ LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability 
 [Sonic Lost World]
 LoaderVersion=2.4.3
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
+[Puyo Puyo Tetris 2]
+LoaderVersion=1.0
+LoaderChangeLog="- Initial Release."
