Updated FML to 7.6

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,6 +1,6 @@
 [Sonic Forces]
-LoaderVersion=7.5
-LoaderChangeLog="- Fix code compatability with HMM 7.2-10.\n- Add more code functions."
+LoaderVersion=7.6
+LoaderChangeLog="- Fixed issue with some codes not executing."
 [Sonic Generations]
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
