--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,5 +8,5 @@ LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability 
 LoaderVersion=2.4.3
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
 [Puyo Puyo Tetris 2]
-LoaderVersion=1.0.1
-LoaderChangeLog="- Fix compatability with latest game update."
+LoaderVersion=1.0.2
+LoaderChangeLog="- Fix codes not loading."
