Add Musashi Mod Loader

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -10,3 +10,6 @@ LoaderChangeLog="- Fixed issue with some codes not executing."
 [Puyo Puyo Tetris 2]
 LoaderVersion=1.0.2
 LoaderChangeLog="- Fix codes not loading."
+[Olympic Games Tokyo 2020]
+LoaderVersion=1.0
+LoaderChangeLog="- Initial Release."
