--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
 [Sonic Lost World]
-LoaderVersion=2.4.3
-LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
+LoaderVersion=2.5
+LoaderChangeLog="- Add movie redirection."
 [Sonic Forces]
 LoaderVersion=7.6
 LoaderChangeLog="- Fixed issue with some codes not executing."
