Update TenpexModLoader to 1.0.3

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,8 +8,8 @@ LoaderChangeLog="- Add movie redirection."
 LoaderVersion=7.6
 LoaderChangeLog="- Fixed issue with some codes not executing."
 [Puyo Puyo Tetris 2]
-LoaderVersion=1.0.2
-LoaderChangeLog="- Fix codes not loading."
+LoaderVersion=1.0.3
+LoaderChangeLog="- Compatibility with latest game version."
 [Olympic Games Tokyo 2020]
 LoaderVersion=1.0
 LoaderChangeLog="- Initial Release."
