--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -5,8 +5,8 @@ LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability 
 LoaderVersion=2.5
 LoaderChangeLog="- Add movie redirection."
 [Sonic Forces]
-LoaderVersion=7.6
-LoaderChangeLog="- Fixed issue with some codes not executing."
+LoaderVersion=7.7
+LoaderChangeLog="- Relocated some patches. I really should rewrite FML someday."
 [Puyo Puyo Tetris 2]
 LoaderVersion=1.0.3
 LoaderChangeLog="- Compatibility with latest game version."
