--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,8 +8,8 @@ LoaderChangeLog="- Add movie redirection."
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches. I really should rewrite FML someday."
 [Puyo Puyo Tetris 2]
-LoaderVersion=1.0.3
-LoaderChangeLog="- Compatibility with latest game version."
+LoaderVersion=2.0
+LoaderChangeLog="- Added signature scanning."
 [Olympic Games Tokyo 2020]
-LoaderVersion=1.0
-LoaderChangeLog="- Initial Release."
+LoaderVersion=2.0
+LoaderChangeLog="- Switched to TenpexModLoader."
