--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -4,6 +4,9 @@ LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability 
 [Sonic Lost World]
 LoaderVersion=2.5
 LoaderChangeLog="- Add movie redirection."
+[HE2ModLoader]
+LoaderVersion=1.0
+LoaderChangeLog="- Initial release of HE2ModLoader."
 [Sonic Forces]
 LoaderVersion=7.7
 LoaderChangeLog="- Relocated some patches. I really should rewrite FML someday."
