Removed remark, not needed

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -9,7 +9,7 @@ LoaderVersion=1.0
 LoaderChangeLog="- Initial release of HE2ModLoader."
 [Sonic Forces]
 LoaderVersion=7.7
-LoaderChangeLog="- Relocated some patches. I really should rewrite FML someday."
+LoaderChangeLog="- Relocated some patches."
 [Puyo Puyo Tetris 2]
 LoaderVersion=2.0
 LoaderChangeLog="- Added signature scanning."
