Update LCL to 2.5.1

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=2.4.4
 LoaderChangeLog="- Prompt user if a DLL failed to load.\nFix code compatability with HMM 7.2-10.\nAdd more code functions."
 [Sonic Lost World]
-LoaderVersion=2.5
-LoaderChangeLog="- Add movie redirection."
+LoaderVersion=2.5.1
+LoaderChangeLog="- Raise frame events at Present instead of EndScene, fixes multiple frame calls."
 [HE2ModLoader]
 LoaderVersion=1.0
 LoaderChangeLog="- Initial release of HE2ModLoader."
